# Atlas

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKUP_MIGRATION.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PROJECT_INSTRUCTIONS.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  main.py  package-lock.json  pr_template.md  pyproject.toml  test_auth_header.py  test_vm_contacts.py  test_vm_contacts_bulk.py  todo.md  vw240.json
.specify/memory/: constitution.md
alembic/: env.py  script.py.mako
alembic/versions/: 20241012_0001_create_auth_tables.py  20241220_0002_add_chat_sessions.py  20250101_0003_domain_indexes.py  20250220_0004_chat_session_context_vars.py  20250305_0005_add_role_permissions.py  20250320_0006_add_secure_settings.py  20250325_0007_add_vcenter_configs.py  20251016_0008_add_generic_device_tables.py  20251120_0009_add_module_configs.py  20251122_0010_add_foreman_configs.py  20251122_0011_add_foreman_username.py  20251202_0012_add_puppet_configs.py  20251212_0013_add_ai_agent_configs.py  20251213_0014_add_ai_usage_tracking.py  20260107_0015_add_is_esxi_to_vcenter_configs.py  20260118_0016_add_workflow_tables.py  20260118_0017_add_playground_tables.py  20260118_0018_add_bot_tables.py  20260118_0019_add_session_client_column.py  20260118_0020_add_usage_client_column.py  20260120_add_playground_usage.py
backups/20250920_202937/: enreach.sqlite3  suggestions.csv
backups/20250921_011646/: Systems CMDB.xlsx  enreach.sqlite3  netbox_merged_export.xlsx
backups/20250921_020548/: netbox_merged_export.csv
backups/20250921_020551/: Systems CMDB.xlsx
backups/20250921_092259/: Systems CMDB.xlsx
backups/20250921_092819/: Systems CMDB.xlsx
backups/20250921_094036/: Systems CMDB.xlsx
backups/20250921_100841/: netbox_vms_export.csv
backups/20250921_100843/: Systems CMDB.xlsx
backups/20250921_102620/: Systems CMDB.xlsx
backups/20250921_102716/: Systems CMDB.xlsx
backups/20250921_102913/: Systems CMDB.xlsx
backups/20250921_103514/: Systems CMDB.xlsx
backups/20250921_115122/: netbox_devices_export.csv
backups/20250921_115829/: Systems CMDB.xlsx
backups/20250921_115947/: Systems CMDB.xlsx
backups/20250921_121046/: Systems CMDB.xlsx
backups/20250921_121137/: Systems CMDB.xlsx
backups/20250921_122416/: merged.csv
backups/20250921_123028/: Systems CMDB.xlsx
backups/20250921_123127/: netbox_vms_export.csv
backups/20250921_123129/: Systems CMDB.xlsx
backups/20250921_125422/: netbox_merged_export.csv
backups/20250921_125424/: Systems CMDB.xlsx
backups/20250921_125608/: Systems CMDB.xlsx
backups/20250921_125641/: Systems CMDB.xlsx
backups/20250921_130042/: Systems CMDB.xlsx
backups/20250921_130459/: Systems CMDB.xlsx
backups/20250921_140455/: Systems CMDB.xlsx
backups/20250921_140543/: Systems CMDB.xlsx
backups/20250921_172408/: Systems CMDB.xlsx
backups/20250921_173714/: netbox_devices_export.csv
backups/20250921_173715/: netbox_merged_export.csv
backups/20250921_173718/: Systems CMDB.xlsx
backups/20250921_183155/: netbox_merged_export.csv  netbox_vms_export.csv
backups/20250921_183157/: Systems CMDB.xlsx
backups/20250925_002622/: netbox_devices_export.csv
backups/20250925_002623/: netbox_vms_export.csv
backups/20250925_002624/: netbox_merged_export.csv
backups/20250925_002626/: Systems CMDB.xlsx
deployment/: CLAUDE-DEPLOY.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml
deployment/scripts/: backup-mongodb.sh  export-k8s-mongodb.sh  generate-certs.sh  import-mongodb.sh
deployment/systemd/: atlas-dev.service  atlas-prod.service  atlas-traefik.service
deployment/traefik/: docker-compose.yml  traefik.yml
docs/: FOREMAN_INTEGRATION_PROPOSAL.md  FOREMAN_TOKEN_SETUP.md  MODULE_DEVELOPMENT.md  REFACTORING_SUMMARY.md  ai-chat.md  api-reference.md  architecture_overview.md  atlas_agents_platform.md  bots.md  cli-reference.md  configuration.md  confluence_rag_setup.md  database_schema.md  deployment.md  getting-started.md  master_database_plan.md  mcp_server.md  mongodb_migration.md  observability_plan.md  optimization_plan.md  playground.md  refactor_plan.md  token_usage_and_rate_limiting.md  vcenter_disk_information.md  web-ui.md
docs/assets/: .gitkeep
docs/feature_requests/: ai_chat_playground_integration.md
docs/integrations/: commvault.md  confluence.md  foreman.md  jira.md  netbox.md  puppet.md  vcenter.md  zabbix.md
docs/issues/: search_module_enablement.md
docs/old/: architecture_overview.md  langchain_agent_plan.md  logging.md  observability_plan.md  (+4 more)
kubernetes/: .gitignore  README.md  REVIEW-PROMPT.md  deploy.sh  test.sh
mcp-server/: .env.example  .gitignore  AUTHENTICATION_FIX.md  README.md  SETUP_GUIDE.md  pyproject.toml  setup_claude.py  tsconfig.json
mcp-server/src/: index.ts  setup.ts
mcp-server/src/atlas_mcp/: __init__.py  server.py
reports/: commvault_backups.xlsx  vm2.xlsx  vm8-retained.csv
scripts/: check_commvault_cache.py  confluence_page_info.py  debug_chunker.py  decrypt_backup.py  deploy_to_production.sh  fix_urls.py  init_db.py  inspect_db.py  inspect_docling.py  jira_myself.py  migrate_embeddings.py  refresh_commvault.py  refresh_commvault_plans.py  refresh_commvault_storage.py  run_cache_migration.py  run_mcp.py  safe_migrate.py  search_confluence.py  sync_confluence.py  sync_sqlite_to_mongodb.py  test_jira_remotelinks.py  update_commvault_cache.py  verify_mongodb_migration.py  visit_app.py
tests/: __init__.py  conftest.py  test_agents_domains.py  test_agents_router.py  test_api_admin_env.py  test_api_admin_router.py  test_api_auth_router.py  test_api_profile_router.py  test_api_suggestions.py  test_application_dto.py  test_application_services.py  test_application_services_netbox.py  test_chat_context.py  test_cli_cache_stats.py  test_cli_export.py  test_cli_users.py  test_infrastructure_caching.py  test_infrastructure_db_mappers.py  test_infrastructure_db_repositories.py  test_infrastructure_external.py  test_infrastructure_logging.py  test_infrastructure_metrics.py  test_integration_external_adapters.py  test_tools_catalog.py
(+381 files in other folders)
