[project]
name = "enreach-tools"
version = "0.1.0"
description = "Utilities and CLI tools for Enreach (Jira, Confluence, NetBox, Zabbix, GitLab, etc.)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Enreach", email = "Daniel.Tromp@Enreach.com" }]
dependencies = [
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "pynetbox>=7.3",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "requests>=2.31",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "itsdangerous>=2.1",
  "python-multipart>=0.0.9",
  "duckdb>=1.0",
  "openai>=1.42.0",
]

[project.scripts]
enreach = "enreach_tools.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# Use src-layout; only include the project package
where = ["src"]
include = ["enreach_tools*"]
exclude = ["personal*"]

[tool.uv]
dev-dependencies = [
  "pytest>=7",
  "ruff>=0.5",
  "mypy>=1.8",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "A", "PL", "PT", "RUF"]
# We keep the code pragmatic for CLI/scripts; ignore stylistic and heavy rules.
ignore = [
  "E501",  # line too long
  "PLR2004",  # magic values in comparisons in scripts
  "A004",     # allow from rich import print
  "B904",     # raise from in simple exits
  # Docstrings & typing (too noisy for scripts / CLI)
  "D", "ANN",
  # Printing to stdout is expected in scripts
  "T201",
  # Complexity and long functions (C901) / too many branches/statements
  "C90", "PLR0912", "PLR0915",
  # Broad except/empty except blocks in best-effort flows
  "S110", "BLE001", "TRY003", "TRY300", "EM101", "EM102",
  # Pathlib migration suggestions
  "PTH",
  # Return annotations for local helpers
  "RET503",
  # Typer boolean flags
  "FBT001", "FBT002", "FBT003",
  # Import position within command functions (Typer lazy-imports)
  "PLC0415",
  # Non-breaking hyphen warnings from copy/paste
  "RUF003",
  # Implicit namespace in utility dirs
  "INP001",
  # subprocess false positive
  "S603", "S607",
]
