[project]
name = "infrastructure-atlas"
version = "0.1.0"
description = "Utilities and CLI tools for Infrastructure Atlas (Jira, Confluence, NetBox, Zabbix, GitLab, etc.)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Infrastructure Atlas Team", email = "drpgmtromp@gmail.com" }]
dependencies = [
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "pynetbox>=7.3",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "requests>=2.31",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "itsdangerous>=2.1",
  "python-multipart>=0.0.9",
  "duckdb>=1.0",
  "cryptography>=41.0",
  "openai>=1.42.0",
  "paramiko>=3.0.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "passlib[bcrypt]>=1.7",
  "bcrypt>=4.1,<5.0",
  "python-docx>=1.1",
  "pyvmomi>=8.0.2",
]

[project.scripts]
atlas = "infrastructure_atlas.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# Use src-layout; only include the project package
where = ["src"]
include = ["infrastructure_atlas*"]
exclude = ["personal*"]

[tool.uv]
dev-dependencies = [
  "pytest>=7",
  "pytest-benchmark>=4",
  "ruff>=0.5",
  "mypy>=1.8",
]

[tool.pytest.ini_options]
markers = [
  "perf: performance regression benchmarks",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "A", "PL", "PT", "RUF"]
# We keep the code pragmatic for CLI/scripts; ignore stylistic and heavy rules.
ignore = [
  "E501",  # line too long
  "PLR2004",  # magic values in comparisons in scripts
  "A004",     # allow from rich import print
  "B904",     # raise from in simple exits
  # Docstrings & typing (too noisy for scripts / CLI)
  "D", "ANN",
  # Printing to stdout is expected in scripts
  "T201",
  # Complexity and long functions (C901) / too many branches/statements
  "C90", "PLR0912", "PLR0915",
  # Broad except/empty except blocks in best-effort flows
  "S110", "BLE001", "TRY003", "TRY300", "EM101", "EM102",
  # Pathlib migration suggestions
  "PTH",
  # Return annotations for local helpers
  "RET503",
  # Typer boolean flags
  "FBT001", "FBT002", "FBT003",
  # Import position within command functions (Typer lazy-imports)
  "PLC0415",
  # Non-breaking hyphen warnings from copy/paste
  "RUF003",
  # Implicit namespace in utility dirs
  "INP001",
  # subprocess false positive
  "S603", "S607",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"src/infrastructure_atlas/api/app.py" = ["PLR0913", "PLR0911"]
"src/infrastructure_atlas/cli.py" = ["PLR0913"]
"src/infrastructure_atlas/application/chat_agents/enhanced_runtime.py" = ["PLR0913"]
"src/infrastructure_atlas/application/chat_agents/runtime.py" = ["PLR0911"]
"src/infrastructure_atlas/application/exporter/netbox.py" = ["PLR0913"]
"src/infrastructure_atlas/infrastructure/external/confluence_client.py" = ["PLR0913"]
"src/infrastructure_atlas/infrastructure/external/zabbix_client.py" = ["PLR0913"]
"src/infrastructure_atlas/infrastructure/rate_limiting.py" = ["PLR0911"]
