[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Infrastructure Atlas API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Infrastructure Atlas", email = "noreply@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
atlas-mcp = "atlas_mcp.server:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
